Bug #1696 - Descending letters are cropped or too tight in group titles

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2183,6 +2183,7 @@ body.membership-requests {
             padding: 2%;
             h6{
                 margin: 7px 0 12px;
+                line-height: 1.3em;
             }
             p,
             a{
